# MirobotROS

install/: local_setup.sh  setup.sh
install/mirobot_moveit_config/share/mirobot_moveit_config/: .setup_assistant  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/mirobot_package/lib/mirobot_package/: mirobot_node  mirobot_node_old.txt
install/mirobot_package/share/mirobot_package/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/mirobot_urdf_2/share/mirobot_urdf_2/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/move_program/include/move_program/: m2_iface.hpp
install/move_program/lib/move_program/: m2_iface_node  move_program
install/move_program/share/move_program/: local_setup.sh  (+1 more)
log/: latest_build  latest_list
src/mirobot_moveit_config/: CMakeLists.txt  package.xml
src/mirobot_moveit_config/config/: joint_limits.yaml  mirobot_urdf_2.ros2_control.xacro  mirobot_urdf_2.urdf.xacro  ros2_controllers.yaml
src/mirobot_moveit_config/launch/: launch.py  moveit_rviz.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/mirobot_package/: CMakeLists.txt  setup.py
src/mirobot_package/mirobot_package/: mirobot_node.py
src/mirobot_package/src/: mirobot_node.cpp
src/mirobot_urdf_2/: CMakeLists.txt
src/mirobot_urdf_2/config/: mirobot_rviz.rviz
src/move_program/: package.xml
src/move_program/src/: move_program.cpp  works.txt  yt.txt
(+13 files in other folders)
